# trading

./: .gitignore  Cargo.toml
algorithm-utils/: Cargo.toml
algorithm-utils/src/: derivative.rs  error.rs  instruction.rs  lib.rs  order.rs  position.rs  stock_exchange.rs
algorithm-utils/src/export/: algorithm_interface.rs  algorithm_registration.rs  mod.rs
algorithm-utils/src/load/: algorithm.rs  algorithms.rs  mod.rs
algorithms/: template.rs
algorithms/template-algorithm/: Cargo.toml
algorithms/template-algorithm/src/: lib.rs
parse-algorithms/: Cargo.toml
parse-algorithms/src/: lib.rs
src/: derivative.rs  main.rs  parse_args.rs
src/apis/: Cargo.toml  comdirect.rs  mod.rs
src/apis/src/: error.rs  lib.rs  traits.rs
src/indicators/: Cargo.toml
src/indicators/src/: ema.rs  lib.rs  sma.rs
src/init/: mod.rs  parse_args.rs  settings.rs
src/init/parse_args/: mod.rs  parse_args_for_later.txt  parse_settings.rs  parse_start.rs
trading-macors/: Cargo.toml
