[package]
name = "trading"
version = "0.1.0"
authors = ["Dzenan Jupic <info@dzenanjupic.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"
serde = { version = "1.0", features = ["derive"] }
toml = "0.5.6"
log = "0.4.8"
log4rs = "0.11.0"
tokio = {version="0.2.18", features=["fs"]}
trading-macors = {path="trading-macors"}
